Full-Stack Development Resume

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class="header-text">
 							<h2>Welcome <span>!</span> <br> i am Hector Lopez <span>.</span>   </h2>
 							<p>Software Engineer and Web Developer</p>
-							<a href="assets/download/Resume Hector Lopez.pdf" download>download resume</a>
+							<a href="assets/download/Hector_Lopez_Resume.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
